Fix: Improve CORS configuration with explicit OPTIONS permit and setAllowedOrigins